# aula07-agentes

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: products.yaml
deploy/: README_SPACE.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  MODEL_CARD_v4.md
evals/: __init__.py  run_bfcl.py
evals/datasets/: bfcl_ptbr_subset.jsonl
src/: __init__.py  cli.py  config.py  llm.py
src/agents/: __init__.py  multi_agent.py  single_agent.py
src/api/: __init__.py  app.py
src/mcp/: __init__.py  server.py
src/tools/: __init__.py  calculator.py  design_validator.py  grade_classifier.py  ideation_generator.py  knowledge_base.py
tests/: test_api.py  test_mcp.py  test_tools.py
